--- a/Midterm.ipynb
+++ b/Midterm.ipynb
@@ -11,14 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "6d4ee432",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Model Training and preprocessing libraries\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import numpy as np\n",
-    "import sklearn"
+    "import seaborn as sns\n",
+    "from sklearn import tree\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.utils import resample\n",
+    "\n",
+    "\n",
+    "#########!!!!!!!!! Performance evaluation libraries\n",
+    "\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import accuracy_score, classification_report, precision_score, recall_score, f1_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import cross_validate"
    ]
   },
   {
@@ -432,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
