--- a/Midterm.ipynb
+++ b/Midterm.ipynb
@@ -11,11 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "6d4ee432",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import seaborn as sns\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sklearn"
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "65f2f1fb",
    "metadata": {},
    "outputs": [],
@@ -48,372 +49,36 @@
    "source": [
     "**Clean Datasets**\n",
     "\n",
-    "Steps:\n",
-    "1.  Removing the irrelevant information\n",
-    "    - is_playable was removed as all values were True.\n",
-    "    - name, track_uri, playlists_uris, artists_uris, and analysis_url removed because they cannot be used and contain null values."
+    "Removing the irrelevant information\n",
+    "\n",
+    "- is_playable was removed as all values were True.\n",
+    "\n",
+    "- name, track_uri, playlists_uris, artists_uris, and analysis_url removed because they cannot be used and contain null values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>popularity</th>\n",
-       "      <th>album_type</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>danceability</th>\n",
-       "      <th>energy</th>\n",
-       "      <th>key</th>\n",
-       "      <th>loudness</th>\n",
-       "      <th>mode</th>\n",
-       "      <th>speechiness</th>\n",
-       "      <th>acousticness</th>\n",
-       "      <th>instrumentalness</th>\n",
-       "      <th>liveness</th>\n",
-       "      <th>valence</th>\n",
-       "      <th>tempo</th>\n",
-       "      <th>duration_ms</th>\n",
-       "      <th>time_signature</th>\n",
-       "      <th>artists_popularities</th>\n",
-       "      <th>artists_genres</th>\n",
-       "      <th>artists_followers</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>single</td>\n",
-       "      <td>2015-11-20</td>\n",
-       "      <td>0.611</td>\n",
-       "      <td>0.614</td>\n",
-       "      <td>5</td>\n",
-       "      <td>-8.815</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0672</td>\n",
-       "      <td>0.01690</td>\n",
-       "      <td>0.000794</td>\n",
-       "      <td>0.7530</td>\n",
-       "      <td>0.520</td>\n",
-       "      <td>128.050</td>\n",
-       "      <td>195000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[9]</td>\n",
-       "      <td>[[]]</td>\n",
-       "      <td>[765]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>33</td>\n",
-       "      <td>album</td>\n",
-       "      <td>2015-09-04</td>\n",
-       "      <td>0.638</td>\n",
-       "      <td>0.781</td>\n",
-       "      <td>4</td>\n",
-       "      <td>-6.848</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0285</td>\n",
-       "      <td>0.01180</td>\n",
-       "      <td>0.009530</td>\n",
-       "      <td>0.3490</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>122.985</td>\n",
-       "      <td>194641</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[68, 56]</td>\n",
-       "      <td>[['etherpop', 'pop', 'r&amp;b'], ['chillstep', 'fu...</td>\n",
-       "      <td>[1283665, 138396]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>52</td>\n",
-       "      <td>single</td>\n",
-       "      <td>2014-10-15</td>\n",
-       "      <td>0.560</td>\n",
-       "      <td>0.810</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-8.029</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0872</td>\n",
-       "      <td>0.00710</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>0.2410</td>\n",
-       "      <td>0.247</td>\n",
-       "      <td>170.044</td>\n",
-       "      <td>217573</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[65]</td>\n",
-       "      <td>[['detroit hip hop', 'pop r&amp;b', 'r&amp;b', 'trap',...</td>\n",
-       "      <td>[1544981]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>single</td>\n",
-       "      <td>2014-07-10</td>\n",
-       "      <td>0.525</td>\n",
-       "      <td>0.699</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-4.571</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0353</td>\n",
-       "      <td>0.01780</td>\n",
-       "      <td>0.000088</td>\n",
-       "      <td>0.0888</td>\n",
-       "      <td>0.199</td>\n",
-       "      <td>92.011</td>\n",
-       "      <td>443478</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[32]</td>\n",
-       "      <td>[['shimmer pop', 'shiver pop']]</td>\n",
-       "      <td>[18241]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>single</td>\n",
-       "      <td>2014-06-17</td>\n",
-       "      <td>0.367</td>\n",
-       "      <td>0.771</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-5.863</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.1060</td>\n",
-       "      <td>0.36500</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>0.0965</td>\n",
-       "      <td>0.163</td>\n",
-       "      <td>115.917</td>\n",
-       "      <td>225862</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[30, 39]</td>\n",
-       "      <td>[['indie poptimism'], ['la pop']]</td>\n",
-       "      <td>[10105, 13775]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>277933</th>\n",
-       "      <td>54</td>\n",
-       "      <td>compilation</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>0.777</td>\n",
-       "      <td>0.725</td>\n",
-       "      <td>5</td>\n",
-       "      <td>-9.012</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0470</td>\n",
-       "      <td>0.12600</td>\n",
-       "      <td>0.010800</td>\n",
-       "      <td>0.0917</td>\n",
-       "      <td>0.851</td>\n",
-       "      <td>128.349</td>\n",
-       "      <td>276360</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[70]</td>\n",
-       "      <td>[['classic rock', 'folk', 'folk rock', 'mellow...</td>\n",
-       "      <td>[2065865]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>277934</th>\n",
-       "      <td>0</td>\n",
-       "      <td>album</td>\n",
-       "      <td>1984-08-21</td>\n",
-       "      <td>0.543</td>\n",
-       "      <td>0.482</td>\n",
-       "      <td>4</td>\n",
-       "      <td>-12.789</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.1940</td>\n",
-       "      <td>0.08530</td>\n",
-       "      <td>0.000092</td>\n",
-       "      <td>0.1110</td>\n",
-       "      <td>0.415</td>\n",
-       "      <td>193.513</td>\n",
-       "      <td>284773</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[63]</td>\n",
-       "      <td>[['german pop', 'german rock', 'new wave pop']]</td>\n",
-       "      <td>[365584]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>277935</th>\n",
-       "      <td>77</td>\n",
-       "      <td>album</td>\n",
-       "      <td>1984-06-04</td>\n",
-       "      <td>0.527</td>\n",
-       "      <td>0.942</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-5.640</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0366</td>\n",
-       "      <td>0.01150</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.1880</td>\n",
-       "      <td>0.495</td>\n",
-       "      <td>148.723</td>\n",
-       "      <td>241307</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[76]</td>\n",
-       "      <td>[['classic rock', 'heartland rock', 'mellow go...</td>\n",
-       "      <td>[5478543]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>277936</th>\n",
-       "      <td>74</td>\n",
-       "      <td>compilation</td>\n",
-       "      <td>2006-01-01</td>\n",
-       "      <td>0.768</td>\n",
-       "      <td>0.829</td>\n",
-       "      <td>5</td>\n",
-       "      <td>-5.109</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0313</td>\n",
-       "      <td>0.09640</td>\n",
-       "      <td>0.000029</td>\n",
-       "      <td>0.0970</td>\n",
-       "      <td>0.962</td>\n",
-       "      <td>118.773</td>\n",
-       "      <td>234333</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[65]</td>\n",
-       "      <td>[['album rock', 'classic rock', 'mellow gold',...</td>\n",
-       "      <td>[1424479]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>277937</th>\n",
-       "      <td>64</td>\n",
-       "      <td>single</td>\n",
-       "      <td>1983-06-01</td>\n",
-       "      <td>0.779</td>\n",
-       "      <td>0.870</td>\n",
-       "      <td>5</td>\n",
-       "      <td>-13.141</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0574</td>\n",
-       "      <td>0.00644</td>\n",
-       "      <td>0.010700</td>\n",
-       "      <td>0.0399</td>\n",
-       "      <td>0.555</td>\n",
-       "      <td>102.689</td>\n",
-       "      <td>241920</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[70]</td>\n",
-       "      <td>[['art punk', 'art rock', 'dance rock', 'funk ...</td>\n",
-       "      <td>[2106792]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>277938 rows × 19 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        popularity   album_type release_date  danceability  energy  key  \\\n",
-       "0                0       single   2015-11-20         0.611   0.614    5   \n",
-       "1               33        album   2015-09-04         0.638   0.781    4   \n",
-       "2               52       single   2014-10-15         0.560   0.810    0   \n",
-       "3                0       single   2014-07-10         0.525   0.699    9   \n",
-       "4                0       single   2014-06-17         0.367   0.771    9   \n",
-       "...            ...          ...          ...           ...     ...  ...   \n",
-       "277933          54  compilation         2007         0.777   0.725    5   \n",
-       "277934           0        album   1984-08-21         0.543   0.482    4   \n",
-       "277935          77        album   1984-06-04         0.527   0.942    1   \n",
-       "277936          74  compilation   2006-01-01         0.768   0.829    5   \n",
-       "277937          64       single   1983-06-01         0.779   0.870    5   \n",
-       "\n",
-       "        loudness  mode  speechiness  acousticness  instrumentalness  liveness  \\\n",
-       "0         -8.815     0       0.0672       0.01690          0.000794    0.7530   \n",
-       "1         -6.848     0       0.0285       0.01180          0.009530    0.3490   \n",
-       "2         -8.029     0       0.0872       0.00710          0.000008    0.2410   \n",
-       "3         -4.571     1       0.0353       0.01780          0.000088    0.0888   \n",
-       "4         -5.863     1       0.1060       0.36500          0.000001    0.0965   \n",
-       "...          ...   ...          ...           ...               ...       ...   \n",
-       "277933    -9.012     1       0.0470       0.12600          0.010800    0.0917   \n",
-       "277934   -12.789     1       0.1940       0.08530          0.000092    0.1110   \n",
-       "277935    -5.640     0       0.0366       0.01150          0.000000    0.1880   \n",
-       "277936    -5.109     1       0.0313       0.09640          0.000029    0.0970   \n",
-       "277937   -13.141     0       0.0574       0.00644          0.010700    0.0399   \n",
-       "\n",
-       "        valence    tempo  duration_ms  time_signature artists_popularities  \\\n",
-       "0         0.520  128.050       195000               4                  [9]   \n",
-       "1         0.250  122.985       194641               4             [68, 56]   \n",
-       "2         0.247  170.044       217573               4                 [65]   \n",
-       "3         0.199   92.011       443478               4                 [32]   \n",
-       "4         0.163  115.917       225862               4             [30, 39]   \n",
-       "...         ...      ...          ...             ...                  ...   \n",
-       "277933    0.851  128.349       276360               4                 [70]   \n",
-       "277934    0.415  193.513       284773               4                 [63]   \n",
-       "277935    0.495  148.723       241307               4                 [76]   \n",
-       "277936    0.962  118.773       234333               4                 [65]   \n",
-       "277937    0.555  102.689       241920               4                 [70]   \n",
-       "\n",
-       "                                           artists_genres  artists_followers  \n",
-       "0                                                    [[]]              [765]  \n",
-       "1       [['etherpop', 'pop', 'r&b'], ['chillstep', 'fu...  [1283665, 138396]  \n",
-       "2       [['detroit hip hop', 'pop r&b', 'r&b', 'trap',...          [1544981]  \n",
-       "3                         [['shimmer pop', 'shiver pop']]            [18241]  \n",
-       "4                       [['indie poptimism'], ['la pop']]     [10105, 13775]  \n",
-       "...                                                   ...                ...  \n",
-       "277933  [['classic rock', 'folk', 'folk rock', 'mellow...          [2065865]  \n",
-       "277934    [['german pop', 'german rock', 'new wave pop']]           [365584]  \n",
-       "277935  [['classic rock', 'heartland rock', 'mellow go...          [5478543]  \n",
-       "277936  [['album rock', 'classic rock', 'mellow gold',...          [1424479]  \n",
-       "277937  [['art punk', 'art rock', 'dance rock', 'funk ...          [2106792]  \n",
-       "\n",
-       "[277938 rows x 19 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dfMain.drop(columns = ['is_playable', 'track_uri', 'name', 'artists_names', 'artists_uris', 'playlist_uris', 'analysis_url'], inplace = True)\n",
-    "dfMain"
+    "dfMain.drop(columns = ['is_playable', 'track_uri', 'name', 'artists_names', 'artists_uris', 'playlist_uris', 'analysis_url'], inplace = True)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "526e5ae0",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62fa7b0d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
