--- a/Midterm.ipynb
+++ b/Midterm.ipynb
@@ -472,8 +472,7 @@
     }
    ],
    "source": [
-    "dfCorr = dfMain.drop(columns = ['album_type'])\n",
-    "dfCorr['artists_popularities'] = dfCorr['artists_popularities'].mean()\n"
+    "dfCorr = dfMain.drop(columns = ['album_type'])\n"
    ]
   }
  ],
